--- a/concent_api/core/templates/admin/active_subtasks.html
+++ b/concent_api/core/templates/admin/active_subtasks.html
@@ -1,4 +1,4 @@
 <div class="line_decorator"></div>
-<div class="active_subtasks"><span>
-    Active Subtasks:<strong> {{ active_subtasks_amount }} </strong></span>
+<div class="active_subtasks">
+    <span>Active Subtasks:<strong> {{ active_subtasks_count }} </strong></span>
 </div>
